# JuggleNet

./: README.md  main.py  pyproject.toml
utils/: Kalman1D.py  ball_tracker.py  download_youtube_video.sh  draw.py  draw_POI.py  graph_plot.py  history_update.py  juggle_counter.py  plot_graph.py  pose.py  stroke_counter.py  update_predict.py  vision_estimate.py
