[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jugglenet"
version = "0.1.0"
description = "A computer vision-based football juggling counter using pose estimation and object detection"
authors = [
    {name = "Jonathan Harrison", email = "jum.harrison@yahoo.co.uk"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["computer-vision", "football", "juggling", "pose-estimation", "object-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opencv-python>=4.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.3.0",
    "mediapipe>=0.10.0",
    "ultralytics>=8.0.0",
    "scipy>=1.7.0",
    "torch>=1.13.0",
    "yt-dlp>=2023.12.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/jugglenet"
Repository = "https://github.com/yourusername/jugglenet"
Issues = "https://github.com/yourusername/jugglenet/issues"

[project.scripts]
jugglenet = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3 